--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 .container {
     margin: 0 auto;
     width: 300px;
-    background-color: #ffffff;
+    background-color: #f3f2f2;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
